--- a/src/app/style/components/typography.css
+++ b/src/app/style/components/typography.css
@@ -10,11 +10,15 @@ h3, .h3 {
     font-size: 16px;
     font-weight: 700;
     color: #000;
+    margin: 10px 0;
 }
 
 h4, .h4 {
     font-size: 12px;
     font-weight: 700;
+}
+p{
+    margin: 10px 0;
 }
 
 a{
