edited structure and detail in components

--- a/src/app/style/components/header.css
+++ b/src/app/style/components/header.css
@@ -1,26 +1,29 @@
-.header{
+.header {
     background-color: #222324;
     width: 100%;
 }
-.header-inner{
+
+.header-inner {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     width: 100%;
+    align-items: center;
     height: 80px;
 }
 
-.header a{
-    color: #fff;
-    margin: 0 10px;
-    cursor: pointer;
-}
-
-.rigth-block, .left-block{
+.header-inner > div {
     display: flex;
     align-items: center;
 }
-.header-search{
+
+.header a {
+    color: #fff;
+    margin: 0 10px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.header-search {
     border: none;
     outline: none;
     background-color: transparent;
@@ -29,12 +32,13 @@
     align-items: center;
     gap: 10px;
     padding: 0 10px;
+    height: 40px;
     cursor: pointer;
 }
 
-.header-button{
-    border: 1px solid #fff;
+.header-button {
     border-radius: 25px;
+    border: 1px solid #fff;
     outline: none;
     background-color: transparent;
     color: #fff;
@@ -43,11 +47,11 @@
     gap: 10px;
     padding: 0 10px;
     height: 40px;
-    margin-right: 10px;
+    margin: 0 10px;
     cursor: pointer;
 }
 
-.header-button-green{
+a.header-button--green {
     border: 1px solid rgba(163, 218, 165, .5);
     color: #A3DAA5;
 }
