--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,9 @@
-@import url(style/vendor/reset.css);
-@import url(style/components/base.css);
+
+@import url(style/vendor/base.css);
 @import url(style/components/header.css);
 @import url(style/components/typography.css);
 @import url(style/components/button.css);
 @import url(style/components/input.css);
 @import url(style/components/card.css);
 @import url(style/components/login.css);
+@import url(style/components/fieldset.css);
