--- a/src/app/style/components/button.css
+++ b/src/app/style/components/button.css
@@ -1,34 +1,44 @@
-.button{
+.button {
     height: 40px;
     border-radius: 4px;
     padding: 0 20px;
     outline: none;
     border: none;
     cursor: pointer;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
 }
 
-.button-primary{
+.button-primary {
     background-color: #1785E5;
     color: #fff;
 }
-.button-primary:hover{
-    opacity: .9;
+
+.button-primary:hover {
+    opacity: 0.9;;
 }
 
-.button-primary-bordered{
+
+.button-primary-bordered {
     border: 1px solid #1785E5;
     color: #1785E5;
     background-color: transparent;
 }
-.button-primary-bordered:hover{
-    opacity: .8;
+
+.button-primary-bordered:hover {
+    opacity: 0.8;
 }
 
-.button-secondary-bordered{
-    border: 1px solid #bcbebf;
-    color: #302233;
-    background-color: #fafafa;
+
+.button-secondary-bordered {
+    border: 1px solid #BCBEBF;
+    color: #303233;
+    background-color: #FAFAFA;
 }
-.button-secondary-bordered:hover{
-    opacity: .8;
+
+.button-secondary-bordered:hover {
+    opacity: 0.8;
 }
