--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,4 @@
 @import url(style/components/card.css);
 @import url(style/components/login.css);
 @import url(style/components/fieldset.css);
+@import url(style/components/dropdown.css);
