--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,5 @@
 @import url(style/components/login.css);
 @import url(style/components/fieldset.css);
 @import url(style/components/dropdown.css);
+@import url(style/components/selectdate.css);
+@import url(style/components/radio.css);
