--- a/src/app/style/components/selectdate.css
+++ b/src/app/style/components/selectdate.css
@@ -19,3 +19,15 @@
     width: 45%;
 }
 
+
+.salary{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+.salary input{
+    width: 40%;
+}
+.salary select{
+    width: 35%;
+}
