--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
 
 @import url(style/vendor/base.css);
+/* @import url(style/vendor/reset.css); */
 @import url(style/components/header.css);
 @import url(style/components/typography.css);
 @import url(style/components/button.css);
@@ -10,3 +11,4 @@
 @import url(style/components/dropdown.css);
 @import url(style/components/selectdate.css);
 @import url(style/components/radio.css);
+@import url(style/components/modal.css);
