--- a/src/app/style/components/selectdate.css
+++ b/src/app/style/components/selectdate.css
@@ -31,3 +31,9 @@
 .salary select{
     width: 35%;
 }
+
+.selectdate-noday select{
+    border-left: 1px solid #ddd;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
