--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,3 +12,4 @@
 @import url(style/components/selectdate.css);
 @import url(style/components/radio.css);
 @import url(style/components/modal.css);
+@import url(style/components/working-history.css);
