Added 'Skills' Blog

--- a/src/app/style/components/input.css
+++ b/src/app/style/components/input.css
@@ -19,7 +19,7 @@
 }
 
 .tags {
-    display: flex;
+    display: flex !important;
     gap: 5px;
     flex-wrap: wrap;
 }
@@ -82,13 +82,13 @@
     position: relative;
 }
 
-.tag{
+/* .tag{
     padding: 5px;
     border-radius: 4px;
     background-color: #eceff0;
     display: inline-block;
     margin-left: 300px;
-}
+} */
 .input-group .input:first-child {
     border-left: 1px solid #ddd;
     border-top-left-radius:4px;
