--- a/src/app/style/components/header.css
+++ b/src/app/style/components/header.css
@@ -51,7 +51,7 @@
     cursor: pointer;
 }
 
-a.header-button--green {
+a.header-button-green {
     border: 1px solid rgba(163, 218, 165, .5);
     color: #A3DAA5;
 }
