--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,3 +13,4 @@
 @import url(style/components/radio.css);
 @import url(style/components/modal.css);
 @import url(style/components/working-history.css);
+@import url(style/components/education.css);
