made a detailed summary page, using dynamic routing(folder [id])

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,3 +14,4 @@
 @import url(style/components/modal.css);
 @import url(style/components/working-history.css);
 @import url(style/components/education.css);
+@import url(style/page/resume.css);
