deletion of the CV has been done

--- a/src/app/style/page/resume.css
+++ b/src/app/style/page/resume.css
@@ -2,3 +2,11 @@
     width: 130px;
     margin-block-start: 1.33em;
 }
+
+.deleteResume{
+    position: absolute;
+    right: 20px;
+    top: 30px;
+    cursor: pointer;
+    color: red;
+}
