--- a/src/app/style/components/card.css
+++ b/src/app/style/components/card.css
@@ -4,4 +4,5 @@
     -webkit-box-shadow: 0px 3px 8px 0px rgba(34,60,80,.2);
     -moz-box-shadow: 0px 3px 8px 0px rgba(34,60,80,.2);
     box-shadow: 0px 3px 8px 0px rgba(34,60,80,.2);
+    position: relative;
 }
