made login and authorisation of the employer and made small improvements in the header

--- a/src/app/style/components/button.css
+++ b/src/app/style/components/button.css
@@ -42,3 +42,11 @@
 .button-secondary-bordered:hover {
     opacity: 0.8;
 }
+
+.button-link{
+    background: transparent;
+    font-weight: 600;
+    width: fit-content !important;
+    height: fit-content !important;
+    padding: 0
+}
