made the logic for creating a job and deleting a job. Slightly redesigned some components

--- a/src/app/style/components/input.css
+++ b/src/app/style/components/input.css
@@ -78,9 +78,9 @@
     border-color: #ddd;
 }
 
-.autocomplite{
+/* .autocomplite{
     position: relative;
-}
+} */
 
 .input-group .input:first-child {
     border-left: 1px solid #ddd;
