Added a job response function and page and created an applySlice for it. Added job search function(with search/vacancy and search/vacancy/advanced). Modified my jobs component and job creation. Fixed authorisation error(localstorage).

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,3 +17,4 @@
 @import url(style/page/resume.css);
 @import url(style/page/auth.css);
 @import url(style/components/spec.css);
+@import url(style/components/table.css);
