--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,3 +18,4 @@
 @import url(style/page/auth.css);
 @import url(style/components/spec.css);
 @import url(style/components/table.css);
+@import url(style/page/applies.css);
