--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,4 @@
 @import url(style/components/spec.css);
 @import url(style/components/table.css);
 @import url(style/page/applies.css);
+@import url(style/components/search.css);
