--- a/src/app/style/components/button.css
+++ b/src/app/style/components/button.css
@@ -13,7 +13,7 @@
 }
 
 .button-primary {
-    background-color: #1785E5;
+    background-color: #0070ff;
     color: #fff;
 }
 
@@ -23,7 +23,7 @@
 
 
 .button-primary-bordered {
-    border: 1px solid #1785E5;
+    border: 1px solid #0070ff;
     color: #1785E5;
     background-color: transparent;
 }
