--- a/src/app/[locale]/style/components/button.css
+++ b/src/app/[locale]/style/components/button.css
@@ -18,7 +18,7 @@
 }
 
 .button-primary:hover {
-    opacity: 0.9;;
+    opacity: 0.9;
 }
 
 
@@ -48,5 +48,5 @@
     font-weight: 600;
     width: fit-content !important;
     height: fit-content !important;
-    padding: 0
+    padding: 0;
 }
