--- a/src/components/WelcomePage/Applicant/Applicant.module.css
+++ b/src/components/WelcomePage/Applicant/Applicant.module.css
@@ -64,6 +64,7 @@
 	color: #fff;
 	text-decoration: underline;
 	transition: .3s;
+	/* cursor: pointer; */
 }
 .btnLink:hover{
 	color: #ff9f8f;
@@ -103,7 +104,6 @@
 	display: flex;
 	align-items: center;
 	gap: 10px;
-	
 }
 .offerJobField input{
 	outline: none;
@@ -131,6 +131,7 @@
 	color: #fff;
 	font-size: 16px;
 	font-weight: 500;
+	cursor: pointer;
 }
 .offerJobRight p{
 	font-size: 14px;
