Add page edit vacancy with logic and create update action also fixed some bags

--- a/src/app/[locale]/style/components/dropdown.css
+++ b/src/app/[locale]/style/components/dropdown.css
@@ -1,6 +1,8 @@
 .dropdown {
     position: absolute;
     top: 60px;
+    height: 300px;
+    overflow: auto;
     right: 0;
     border: 1px solid #ddd;
     border-radius: 4px;
