Added datatypes function for search by datetime new endPoint for search service changed from quety search to elastic and modified some files implemented search by range salary_to and salary_from with Mui slider component downloaded MUI

--- a/src/app/[locale]/style/components/input.css
+++ b/src/app/[locale]/style/components/input.css
@@ -92,9 +92,16 @@
     border-color: #ddd;
 }
 
-/* .autocomplite{
-    position: relative;
-} */
+.salary-labels {
+    width: 100%;
+    display: flex;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.small-select {
+    width: 90px;
+}
 
 .input-group .input:first-child {
     border-left: 1px solid #ddd;
