--- a/src/app/[locale]/style/components/dropdown.css
+++ b/src/app/[locale]/style/components/dropdown.css
@@ -1,7 +1,8 @@
 .dropdown {
     position: absolute;
     top: 60px;
-    height: 300px;
+    height: max-content;
+    max-height: 300px;
     overflow: auto;
     right: 0;
     border: 1px solid #ddd;
