--- a/src/app/[locale]/style/components/modal.css
+++ b/src/app/[locale]/style/components/modal.css
@@ -35,3 +35,49 @@
     gap: 20px;
     margin-top: 20px;
 }
+
+.modal-content {
+    background: #ffffff;
+    width: 80%;
+    max-width: 500px;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    animation: fadeIn 0.3s ease-in-out;
+    position: relative;
+    text-align: center;
+}
+
+.modal-content h2 {
+    font-size: 1.5rem;
+    color: #333;
+    margin-bottom: 1rem;
+}
+
+.modal-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content .MuiFormControlLabel-root{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 0.5rem 0;
+    color: #555;
+}
+
+.close {
+    position: absolute;
+    top: 20px;
+    right: 40px;
+    height: 30px;
+    padding: 5px 10px;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; transform: translateY(-10px); }
+    to { opacity: 1; transform: translateY(0); }
+}
