--- a/src/app/[locale]/style/components/search.css
+++ b/src/app/[locale]/style/components/search.css
@@ -123,7 +123,7 @@
     height: 45px;
     border-radius: 10px;
     font-weight: 500;
-	background-color: #0070ff;
+	background-color: #4E9F3D;
 	border-radius: 4px;
 	color: #fff;
 	font-size: 16px;
