--- a/src/app/[locale]/style/page/resume.css
+++ b/src/app/[locale]/style/page/resume.css
@@ -4,9 +4,9 @@
 }
 
 .deleteResume{
-    position: absolute;
+    /* position: absolute;
     right: 20px;
-    top: 30px;
+    top: 30px; */
     cursor: pointer;
     color: red;
 }
