--- a/src/app/[locale]/style/components/card.css
+++ b/src/app/[locale]/style/components/card.css
@@ -1,4 +1,6 @@
 .card{
+    display: flex;
+    flex-direction: column;
     border-radius: 4px;
     padding: 20px;
     -webkit-box-shadow: 0px 3px 8px 0px rgba(34,60,80,.2);
@@ -8,11 +10,9 @@
 }
 .cardTop{
     display: flex;
-    align-items: center;
     justify-content: space-between;
 }
-.cardTop .action{
+.action{
     display: flex;
-    flex-direction: column;
-    gap: 20px;
+    justify-content: space-between;
 }
