--- a/src/components/WelcomePage/Employer/Employer.module.css
+++ b/src/components/WelcomePage/Employer/Employer.module.css
@@ -5,11 +5,12 @@
 }
 .sendVacancyContain{
 	width: 100%;
-	height: 100%;
+	height: 600px;
 	background-color: #fff;
-	background-image: url('/img/bgMain2.svg');
+	background-image: url('/img/bgMain3.png');
 	background-repeat: no-repeat;
 	background-size: cover;
+	background-position: center;
 	padding: 50px 0;
 }
 .vacancyMain{
