--- a/src/app/[locale]/style/components/header.css
+++ b/src/app/[locale]/style/components/header.css
@@ -17,6 +17,11 @@
     align-items: center;
 }
 
+.left-block img {
+    width: 60px;
+    height: 60px;
+}
+
 .header-inner > div {
     display: flex;
     align-items: center;
@@ -116,4 +121,83 @@ footer .header-inner {
 
 .footer-right div:hover {
     background-color: #f4f4f4;
+}
+
+@media screen and (max-width: 768px) {
+    .header-inner {
+        flex-direction: column !important;
+        height: auto;
+        padding: 10px 0;
+    }
+
+    .header .left-block img {
+        width: 50px;
+        height: 50px;
+    }
+
+    .header-search, .header-button {
+        height: 35px;
+        padding: 0 8px;
+    }
+
+    .header-inner > div {
+        margin-top: 10px;
+    }
+
+    footer .header-inner {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 20px;
+    }
+
+    .footer-left, .footer-right {
+        gap: 20px;
+    }
+
+    .footer-right img {
+        width: 18px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .header-inner {
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 15px 0;
+    }
+
+    .header .left-block img {
+        width: 55px;
+        height: 55px;
+    }
+
+    .header-search, .header-button {
+        height: 38px;
+        padding: 0 9px;
+    }
+
+    .footer-left {
+        flex-direction: row;
+        gap: 20px;
+    }
+
+    .footer-right {
+        gap: 15px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .header-inner {
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 20px 0;
+    }
+
+    .footer-left {
+        gap: 30px;
+    }
+
+    .footer-right {
+        gap: 10px;
+    }
 }
